dep4.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep4
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: my-db
  template:
    metadata:
      labels:
        app: my-db
    spec:
      containers:
      - image: postgres:10.13
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
