depl_redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-redmine
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: my-redmine
  template:
    metadata:
      labels:
        app: my-redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
