service_3000.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: my-redmine
  type: LoadBalancer
