ingress_05.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
#  - host: my-host.local 
#    http:
  -  http:
      paths:
      - backend:
          serviceName: redmine-svc
          servicePort: 80
